fixed bug and overflow scroll

--- a/app/caitlin/style.css
+++ b/app/caitlin/style.css
@@ -5,7 +5,6 @@ main > section {
 * {
   box-sizing: border-box;
   scroll-behavior: smooth;
-  overflow: scroll;
 }
 
 body {
@@ -17,13 +16,14 @@ body {
   min-height: 100vh;
   position: relative;
   font-family: 'raleway';
+  overflow: scroll;
 }
 
 h1 {
   text-align: center;
   vertical-align: middle;
-  margin: 30vh 0 0 0;
-  font-size: 2em;
+  margin: 10vh 0 0 0;
+  font-size: 1.5em;
 }
 
 nav {
@@ -72,13 +72,9 @@ a {
   font-style: italic;
 }
 
-#top-panel {
+header {
   color: white;
-  margin: 0;
   height: 80vh;
-}
-
-#top-panel > header {
   padding: 0.05em;
   font-size: 30px;
   margin: 10px 10px 0 10px;
@@ -303,7 +299,7 @@ footer {
   }
 
   h1 {
-    font-size: 5em;
+    font-size: 2em;
     padding-top: 35vh;
   }
 
@@ -334,7 +330,7 @@ footer {
 
 @media only screen and (min-width: 725px) {
   header {
-    height: 93vh;
+    height: 100vh;
   }
 
   nav {
@@ -344,6 +340,7 @@ footer {
     top: 0;
     text-transform: initial;
     z-index: 9;
+    margin-top: -78px;
   }
 
   nav > a {
@@ -423,13 +420,20 @@ footer {
   }
 
   #about-me img {
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
   }
 
   .skill-explanations {
     vertical-align: center;
     font-size: 1.3vw;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  #about-me img {
+    width: 250px;
+    height: 250px;
   }
 }
 
